--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+  fl_chart: ^1.0.0
+  supabase: ^2.8.0
+  get: ^4.7.2
+  http: ^1.4.0
+  file_picker: ^10.2.0
+  google_sign_in: ^6.3.0
+  flutter_launcher_icons: ^0.14.4
+  font_awesome_flutter: ^10.8.0
+  url_launcher: ^6.3.1
+  image_picker: ^1.1.2
+  supabase_flutter: ^2.9.1
+  shimmer: ^3.0.0
+  intl: ^0.20.2
+  flutter_datetime_picker_plus: ^2.2.0
+  flutter_datetime_picker_bdaya: ^3.0.2
+  glassmorphism: ^3.0.0
+  lottie: ^3.3.1
+  flutter_floating_bottom_bar: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +76,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/
+    - assets/auth/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
